trying to fix the issues with home page on mobile

--- a/CSS Code/HomePage.css
+++ b/CSS Code/HomePage.css
@@ -203,7 +203,7 @@ a:hover {
     display: flex; /* Show the hamburger menu */
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px; /* Adjust as necessary */
+    padding: 0; /* Adjust as necessary */
   }
   
   .hamburger-menu {
